@@ -4,6 +4,8 @@ See the end for copying conditions.
 
 * Version 0.0.7 (unreleased)
 
+** ARCFOUR encryption support according to draft-brezak-win2k-krb-rc4-hmac-04.
+
 * Version 0.0.6 (released 2003-09-14)
 
 ** Proxiable, proxy, forwardable and forwarded tickets supported.
